@@ -86,6 +86,7 @@ source "package/libsysfs/Config.in"
 source "package/lockfile-progs/Config.in"
 source "package/logrotate/Config.in"
 source "package/lsof/Config.in"
+source "package/lmbench/Config.in"
 source "package/ltp-testsuite/Config.in"
 source "package/ltrace/Config.in"
 source "package/memstat/Config.in"
